ribit-ssa/src/snapshots/ribit_ssa__lower__test__addi_no_dest.snap
---
source: ribit-ssa/src/lower.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = add %2, 00000032
ret 00000001, 00000008
