ribit-ssa/src/snapshots/ribit_ssa__lower__test__jal_basic.snap
---
source: ribit-ssa/src/lower.rs
expression: DisplayDeferSlice(&instrs)

---
%0 = args[0]
%1 = args[1]
x(%0)4 = 00000004
ret 00000000, 00001000
